# KnolNinjas_LetAISpeakToYourMoney

./: __main__.py  agent.py  agent_executor.py  config.yaml  docker-compose.yml  index.html  metadata.json  package-lock.json  package.json  run.ps1  types.ts
Agent_Pradip/: __main__.py  agent.py  agent_executor.py
Agent_Sayar/: .env  __main__.py  agent.py  agent_executor.py  pyproject.toml
Agent_Subhobroto/: agent.py
agents/CSAgent/: Dockerfile  __main__.py  agent.py  pyproject.toml
agents/ComprehensiveReceiptAgent/: .gitignore  Dockerfile  __main__.py  agent.py  agent_executor.py  pyproject.toml
agents/FiMoneyAgent/: .env  Dockerfile  __main__.py  agent.py  agent_executor.py  pyproject.toml
agents/SmartFinancialAdvisorAgent/: .env  Dockerfile  __main__.py  agent.py  agent_executor.py  pyproject.toml
agents/investment_planner_agent/: .env  Dockerfile  __main__.py  (+3 more)
agents/risk_analyzer_agent/: .dockerignore  .env  Dockerfile  __main__.py  agent.py  agent_executor.py  pyproject.toml
agents/risk_analyzer_agent/subagent/analyser/: __init__.py  agent.py  tools.py
agents/risk_analyzer_agent/subagent/normalized_output/: __init__.py  agent.py
components/: ChatPanel.tsx  Dashboard.tsx  FiMoneyConfig.tsx  InsightCard.tsx  LandingPage.tsx  LoginScreen.tsx  SignUpScreen.tsx
frontend/: App.tsx  README.md  config.ts  firebase.config.ts  package-lock.json  package.json  useAuth.ts
host_agent/: Dockerfile  __main__.py  application_manager.py  host_agent.py  host_manager.py  pyproject.toml  remote_agent_connections.py  server.py
services/: memoryService.ts
(+25 files in other folders)
